feat: implement parsing for the remaining non-LR fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
 		"inlineSourceMap": false,
 		"stripInternal": true,
 
+		// Required for pnpm
+		"preserveSymlinks": true,
+
 		"watch": false, // true breaks CI scripts
 		"pretty": true,
 		"types": ["node", "jest", "jest-extended"],
