--- a/packages/nvmedit/package.json
+++ b/packages/nvmedit/package.json
@@ -9,8 +9,10 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
+    "bin/",
     "build/**/*.{js,d.ts,map}"
   ],
+  "bin": "bin/nvmedit.js",
   "author": {
     "name": "AlCalzone",
     "email": "d.griesel@gmx.net"
@@ -35,7 +37,8 @@
     "@zwave-js/shared": "8.7.3",
     "alcalzone-shared": "^4.0.1",
     "fs-extra": "^10.0.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "yargs": "^17.2.1"
   },
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
@@ -46,6 +49,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^15.12.5",
+    "@types/yargs": "^17.0.5",
     "esbuild": "*",
     "esbuild-register": "^3.1.2",
     "jest-extended": "^0.11.5",
