--- a/packages/nvmedit/package.json
+++ b/packages/nvmedit/package.json
@@ -38,6 +38,7 @@
     "alcalzone-shared": "^4.0.1",
     "fs-extra": "^10.0.0",
     "reflect-metadata": "^0.1.13",
+    "semver": "^7.3.5",
     "yargs": "^17.2.1"
   },
   "scripts": {
@@ -49,6 +50,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^15.12.5",
+    "@types/semver": "^7.3.9",
     "@types/yargs": "^17.0.5",
     "esbuild": "*",
     "esbuild-register": "^3.1.2",
